--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -19,6 +19,7 @@ jobs:
 
       - name: npm dependencies
         run: npm install
+        run: npx gulp default
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
