--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -20,7 +20,7 @@ jobs:
       - name: npm dependencies
         run: npm install
 
-        name: gulp dependencies
+      - name: gulp dependencies
         run: npx gulp default
 
       - name: Setup Hugo
